# Trekkyfy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package-lock.json  package.json  requirements.txt
.github/workflows/: ai-review.yml  main-ci.yml  quality-gate.yml  security-compliance.yml  testing.yml
trekkyfy-backend/: .dockerignore  Dockerfile  README.md  app.py  config.py  extensions.py  fake.py  locustfile.py  machine_learning.py  main.py  models.py  pyproject.toml  requirements.txt
trekkyfy-backend/routes/: __init__.py  auth_login.py  auth_logout.py  booking.py  contact.py  explore_trek.py  feedback_submit.py  forgot.py  guide_complete.py  hiker_details.py  hiker_info.py  image_upload.py  newsletter.py  pending_requests.py  pending_responses.py  priavl_guide_res.py  questions.py  registeration.py  reset.py  user_profiles.py  wishlist.py
trekkyfy-backend/tests/: test_config.py
trekkyfy-frontend/: README.md  package-lock.json  package.json
trekkyfy-frontend/src/app/: layout.tsx  page.tsx  socket.ts
trekkyfy-frontend/src/app/about/: layout.tsx  page.tsx
trekkyfy-frontend/src/app/complete-guide-profile/: page.tsx
trekkyfy-frontend/src/app/contact/: layout.tsx  page.tsx
trekkyfy-frontend/src/app/context/: AuthContext.tsx
trekkyfy-frontend/src/app/dashboard/: page.tsx
trekkyfy-frontend/src/app/explore/: layout.tsx  page.tsx
trekkyfy-frontend/src/app/faq/: page.tsx
trekkyfy-frontend/src/app/guide/: GuideModal.tsx  PriceAvail.tsx  guideCard.tsx  guideHero.css  guideHero.tsx  guideProfile.tsx  guideSearch.tsx  page.tsx
trekkyfy-frontend/src/app/hike-components/: GuideHeartbeat.tsx  PriceAvailabilityPopup.tsx  PriceAvailabilityResponse.tsx  about.tsx  dashboard.tsx  feature.tsx  feedback.tsx  footer.tsx  hero.tsx  hikernotificationpopup.tsx  navbar.tsx  notificationpopup.tsx  work.tsx
trekkyfy-frontend/src/app/home/: page.tsx
trekkyfy-frontend/src/app/notifications/: GuidePriceAvailabilityForm.tsx  page.tsx
trekkyfy-frontend/src/app/privacy-and-policy/: layout.tsx  page.tsx
trekkyfy-frontend/src/app/rough/: page.tsx
trekkyfy-frontend/src/app/services/: flipcard.tsx  layout.tsx  page.tsx
trekkyfy-frontend/src/app/stylesheet/: Forgot-Password.css  GuideAvailablityForm.css  PriceAvailabilityResponse.css  about-main.css  about.css  complete-guide-profile.css  contact.css  dashboard.css  discount.css  explore.css  faq.css  feature.css  footer.css  guideCard.css  guideHero.css  guideProfile.css  guideSearch.css  guidemodal.css  hero.css  hikerInfo.css  login.css  navbar.css  notification.css  services.css  terms.css  testimonial.css  wishlist.css  work.css
trekkyfy-frontend/src/app/terms-and-conditions/: page.tsx
trekkyfy-frontend/src/app/trek-trails/: BookingStepper.tsx  Step1.tsx  Step2.tsx  Step3.tsx  Step4.tsx  page.tsx  trek_trails.tsx
trekkyfy-frontend/src/app/wishlist/: page.tsx
trekkyfy-frontend/src/comp/: ProtectedRoute.tsx
trekkyfy-frontend/src/utils/: axiosConfig.tsx
trekyatra-backend/: app.py  extensions.py  models.py
trekyatra-frontend/: package-lock.json  package.json
trekyatra-frontend/src/app/: layout.tsx  page.tsx
trekyatra-frontend/src/app/contact/: page.tsx
trekyatra-frontend/src/app/faq/: layout.tsx  page.tsx
trekyatra-frontend/src/app/hike-components/: discount.tsx  navbar.tsx  testimonial.tsx  work.tsx
trekyatra-frontend/src/app/services/: flipcard.tsx  page.tsx
(+24 files in other folders)
