[project]
name = "trekkyfy-backend"
version = "0.1.0"
description = "Trekkyfy backend service"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.1.0",
  "flask-bcrypt>=1.0.1",
  "flask-cors>=5.0.0",
  "flask-jwt-extended>=4.7.1",
  "flask-mail>=0.10.0",
  "flask-socketio>=5.5.1",
  "flask-sqlalchemy>=3.1.1",
  "cloudinary>=1.42.2",
  "eventlet>=0.39.0",
  "itsdangerous>=2.2.0",
  "pymysql>=1.1.1",
  "sqlalchemy>=2.0.37",
  "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
follow_imports = "skip"
files = ["config.py", "tests"]
exclude = [
  "routes/__pycache__/",
  "__pycache__/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["config"]
omit = [
  "tests/*",
  "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
