[project]
name = "trekkyfy-backend"
version = "0.1.0"
description = "Trekkyfy backend service"
requires-python = ">=3.11"
dependencies = [
  "bcrypt>=4.2.1",
  "bidict>=0.23.1",
  "blinker>=1.9.0",
  "certifi>=2025.1.31",
  "click>=8.1.8",
  "cloudinary>=1.42.2",
  "colorama>=0.4.6",
  "dnspython>=2.7.0",
  "eventlet>=0.39.0",
  "fastapi>=0.115.0",
  "flask>=3.1.0",
  "flask-bcrypt>=1.0.1",
  "flask-cors>=5.0.0",
  "flask-jwt-extended>=4.7.1",
  "flask-mail>=0.10.0",
  "flask-socketio>=5.5.1",
  "flask-sqlalchemy>=3.1.1",
  "greenlet>=3.1.1",
  "gunicorn>=23.0.0",
  "h11>=0.14.0",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.5",
  "joblib>=1.4.2",
  "markupsafe>=3.0.2",
  "numpy>=2.2.4",
  "packaging>=24.2",
  "pandas>=2.2.3",
  "psycopg[binary]>=3.2.0",
  "pyjwt>=2.10.1",
  "python-dateutil>=2.9.0.post0",
  "python-engineio>=4.11.2",
  "python-socketio>=5.12.1",
  "pytz>=2025.2",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.2",
  "simple-websocket>=1.1.0",
  "six>=1.17.0",
  "sqlalchemy>=2.0.37",
  "threadpoolctl>=3.6.0",
  "typing-extensions>=4.12.2",
  "tzdata>=2025.2",
  "urllib3>=2.3.0",
  "uvicorn>=0.31.0",
  "werkzeug>=3.1.3",
  "wsproto>=1.2.0",
]

[dependency-groups]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
follow_imports = "skip"
files = ["config.py", "tests"]
exclude = [
  "routes/__pycache__/",
  "__pycache__/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["config"]
omit = [
  "tests/*",
  "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
